<resources>
    <string name="app_name">Lab03c2016</string>
    <string name="monedaUS">U$S</string>
    <string name="monedaUE">€</string>
    <string name="monedaAR">AR$</string>
    <string name="monedaUK">£</string>
    <string name="monedaBR">R$</string>
    <string name="crearOferta">Cree su oferta</string>
    <string name="ingresarOferta">Ingrese la oferta</string>
    <string name="elegirCategoría">Elija la categoría</string>
    <string name="monedaPago">Elija la moneda de pago</string>
    <string name="oferta">Oferta</string>
    <string name="mCrearOferta">Crear una oferta</string>
    <string name="mVerOfertas">Ver mis ofertas</string>
    <string name="mConfiguracion">Configuración</string>
    <string name="mSalir">Salir</string>
    <string name="bConfOferta">Confirmar Oferta</string>
    <string name="mcPostular">Postularse a esta oferta</string>
    <string name="mcCompartir">Compartir esta oferta</string>
</resources>
